test/neg/neg-serial3.errc
UPCXX_SERIALIZED_BASE.Type. within UPCXX_SERIALIZED_FIELDS..... requires Type not be polymorphic
